VeraSandBox2016/src/objects/Outreach_Result__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cooperation__c</fullName>
        <inlineHelpText>Please indicate subject of cooperation</inlineHelpText>
        <label>Cooperation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Origin__c</fullName>
        <inlineHelpText>Does this result origin from an outreach initially made at an event?</inlineHelpText>
        <label>Event Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you have select YES under EVENT ORIGIN, please select the event, otherwise leave blank</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Outreach Results</relationshipLabel>
        <relationshipName>Outreach_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Outreach Results</relationshipLabel>
        <relationshipName>Outreach_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Outreach Results</relationshipLabel>
        <relationshipName>Outreach_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_ID__c</fullName>
        <label>Outreach ID</label>
        <referenceTo>Outreach__c</referenceTo>
        <relationshipLabel>Outreach Results</relationshipLabel>
        <relationshipName>Outreach_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Result_Type__c</fullName>
        <label>Result Type</label>
        <picklist>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Outreach Results</relationshipLabel>
        <relationshipName>Outreach_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outreach Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORR-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Specify_Event</fullName>
        <active>true</active>
        <description>If the Outreach originated with an event, the Event should be specified</description>
        <errorConditionFormula>AND( ISPICKVAL( Event_Origin__c , &quot;Yes&quot;) , ISBLANK( Event__c ) )</errorConditionFormula>
        <errorDisplayField>Event__c</errorDisplayField>
        <errorMessage>If you have selected YES under EVENT ORIGIN, please select the event</errorMessage>
    </validationRules>
</CustomObject>